Provide ability to change game speed in games using AdminControllerService

--- a/CodingDojo/games/pom.xml
+++ b/CodingDojo/games/pom.xml
@@ -45,9 +45,9 @@
         <module>sample-text</module>
         <module>a2048</module>
         <module>a2048-extreme</module-->
-        <module>bomberman</module>
-        <!--module>battlecity</module>
-        <module>chess</module>
+        <!--<module>bomberman</module>-->
+        <module>battlecity</module>
+        <!--module>chess</module>
         <module>collapse</module>
         <module>hex</module>
         <module>loderunner</module>
