Add client WS endpoint which returns json instead of the board content in a plain text. To turn off WS Json (v2) - pass VM argument -Dspring.profiles.active=ws_v2

--- a/CodingDojo/server/src/main/webapp/WEB-INF/web.xml
+++ b/CodingDojo/server/src/main/webapp/WEB-INF/web.xml
@@ -85,6 +85,17 @@
         <url-pattern>/ws/*</url-pattern>
     </servlet-mapping>
 
+    <!-- websocket servlet for player game V2 (to add additional information to message) -->
+    <servlet>
+        <servlet-name>wsPlayerControlServletV2</servlet-name>
+        <servlet-class>com.codenjoy.dojo.transport.control.PlayerControlWebSocketServletV2</servlet-class>
+        <load-on-startup>101</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>wsPlayerControlServletV2</servlet-name>
+        <url-pattern>/ws/v2/*</url-pattern>
+    </servlet-mapping>
+
     <!-- async screen controller servlet for draw board in browser -->
     <servlet>
         <servlet-name>screenControllerServlet</servlet-name>
