--- a/CodingDojo/games/pom.xml
+++ b/CodingDojo/games/pom.xml
@@ -45,7 +45,7 @@
         <module>sample-text</module>
         <module>a2048</module>
         <module>a2048-extreme</module-->
-        <!--<module>bomberman</module>-->
+        <module>bomberman</module>
         <module>battlecity</module>
         <!--module>chess</module>
         <module>collapse</module>
